[package]
name = "holyjit"
version = "0.0.0"
authors = [ "Nicolas B. Pierron <nicolas.b.pierron@nbp.name>" ]

[workspace]
members = [
  "lir",
  "codegen",
  "lib",
  "plugin",
  "bin"
]

[dependencies]
holyjit_lib = { path = "./lib" }
holyjit_bin = { path = "./bin" }

# Before running any tests or examples, make sure to set the RUSTC_WRAPPER as
# follow:
#
# export RUSTC_WRAPPER=$PWD/rustc.sh
#
# This wrapper will choose whether to start holyjit as a compiler instead of
# starting the default rustc compiler.
[[example]]
name = "brainfuck"
