[package]
name = "holyjit_lir"
version = "0.0.0"
authors = [ "Nicolas B. Pierron <nicolas.b.pierron@nbp.name>" ]

# Lock dynasm and serde_derive in order to build against old versions of
# rustc.
[dependencies]
serde = "1.0"
serde_derive = "=1.0.12"
bincode = "0.8"

[lib]
name = "holyjit_lir"
path = "src/lib.rs"

